--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/riko20172017/webrtc/issues"
   },
-  "homepage": "https://github.com/riko20172017/webrtc#readme"
+  "homepage": "https://github.com/riko20172017/webrtc#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "ws": "^7.4.5"
+  }
 }
